<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegVendorDetails">

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/bold"
        android:text="Vendor Details"
        android:textColor="@color/Black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toTopOf="@+id/nameET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/avatar1"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/nameET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corner"
        android:ems="10"
        android:fontFamily="@font/medium"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="@color/FontColor"
        app:layout_constraintBottom_toTopOf="@+id/emailEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="RtlSymmetry" />



    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/regular"
        android:hint="@string/gender"
        android:textColor="@color/FontColor"
        android:textColorHint="@color/FontColor"
        app:layout_constraintTop_toBottomOf="@id/ageEt"
        app:layout_constraintBottom_toTopOf="@+id/nextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toBottomOf="@id/nextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nextBtn">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </FrameLayout>

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corner"
        android:ems="10"
        android:fontFamily="@font/medium"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="@color/FontColor"
        app:layout_constraintBottom_toTopOf="@+id/ageEt"
        app:layout_constraintTop_toBottomOf="@id/nameET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ageEt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/emailEt"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corner"
        android:ems="10"
        android:fontFamily="@font/medium"
        android:hint="@string/age"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/FontColor"
        app:layout_constraintBottom_toTopOf="@+id/genderSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="49dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/round_corner"
        android:ems="10"
        android:fontFamily="@font/medium"
        android:text="@string/next"
        android:textColor="@color/White"
        app:backgroundTint="@color/Primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderSpinner" />




</androidx.constraintlayout.widget.ConstraintLayout>